# ArduinoMotorControl

./: .clang_complete  README.md  avr.txt  meson.build  meson_options.txt
src/: config.h  hcode.c  hcode.h  main.c  meson.build  motor.c  motor.h  step_command.c  step_command.h  step_tick.c  step_tick.h
src/atmega328p/: atmega328p.ld  gpio.c  gpio.h  interrupt.h  timer.c  timer.h  uart.c  uart.h
